# hackthelaw

./: .env.example  .gitignore  README.md  middleware.ts  package-lock.json  package.json
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
app/(app)/: layout.tsx
app/(marketing)/: layout.tsx  page.tsx
app/backend/: page.tsx
app/login/: layout.tsx  page.tsx
backend/: .env.example  .gitignore  pyproject.toml
backend/.next/: trace  trace-build
backend/.next/cache/: .previewinfo  .rscinfo
backend/app/: audit.py  auth.py  auth_middleware.py  config.py  db.py  embeddings.py  main.py  models.py  supabase_client.py
backend/app/ingest/: annotation_agent.py  case_intelligence.py  embeddings.py  extract_text.py  extraction_agent.py  query_agent.py  semantic_similarity.py  similarity.py  summary_agent.py
backend/app/routes/: case_events.py  cases.py  documents.py  members.py  query.py  seed.py  timeline.py  users.py  wipe.py
backend/hackthelaw_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/schema/: 001_init.cypher
backend/scripts/: apply_schema.py  seed_and_test.py
components/quinn/: analyze-button.tsx  app-sidebar.tsx  backend-graph.tsx  case-health-banner.tsx  case-intelligence.tsx  case-timeline.tsx  chat-panel.tsx  clause-detail-panel.tsx  document-diff-dialog.tsx  document-lifecycle.tsx  document-viewer.tsx  entity-list.tsx  graph-colors.ts  inspect-sheet.tsx  lane-config.ts  marketing-header.tsx  matter-board.tsx  matter-detail-tabs.tsx  matter-graph.tsx  matter-overview.tsx  new-information-button.tsx  sidebar-matter-list.tsx  sign-out-button.tsx  status-dot.tsx  time-scrubber.tsx  typewriter-text.tsx  upload-document.tsx
data/: litigation-settlement.md  matters.json  playbook.json
docs/: SUPABASE_ARCHITECTURE.md
lib/: backend.ts  embeddings.ts  format.ts  neo4j.ts  perplexity.ts
lib/chat/: answer.ts  (+2 more)
scripts/: backfill-embeddings.ts  dev.sh  ingest.ts  reset.ts
(+43 files in other folders)
