[project]
name = "hackthelaw-backend"
version = "0.1.0"
description = "Legal second-brain backend — FastAPI + Neo4j"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "neo4j>=5.20",
    "pydantic>=2.9",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "httpx>=0.27",           # async HTTP (Document AI, etc.)
    "pymupdf>=1.24",         # PDF text extraction
    "strands-agents>=1.0",   # agent framework (model-agnostic)
    "anthropic>=0.30",       # Anthropic SDK (for Strands)
    "python-multipart>=0.0.9", # file uploads in FastAPI
    "supabase>=2.0",           # Supabase Python client
    "pyjwt[crypto]>=2.8",     # JWT decoding for Supabase Auth
    "pytesseract>=0.3",       # OCR for image documents
    "Pillow>=10.0",           # Image processing for OCR
    "voyageai>=0.3",          # Legal document embeddings
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
